k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkers-ingress
  namespace: checkers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - checker.golovanov.me
      secretName: checkers-tls
  rules:
    - host: checker.golovanov.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: checkers
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checker-frontend
                port:
                  number: 80
